--- a/templates/public/perfil/perfil.html
+++ b/templates/public/perfil/perfil.html
@@ -43,8 +43,7 @@
 
 {% endblock %}
 
-{% block jscript %}
-    <script src="/static/js/forms.js?version=11"></script>
+{% block extra_js %}
     <script>
         $(function () {
 
