--- a/static/views.css
+++ b/static/views.css
@@ -37,8 +37,24 @@ body {
     margin-top: 125px !important;
 }
 
+.mt-100{
+    margin-top: 100px !important;
+}
+
+.mt-75{
+    margin-top: 75px !important;
+}
+
 @media (min-width: 992px) {
     .mt-lg-125 {
         margin-top: 125px !important;
+    }
+
+    .mt-lg-100 {
+        margin-top: 100px !important;
+    }
+
+    .mt-lg-75 {
+        margin-top: 75px !important;
     }
 }
