--- a/templates/pedidos/pedido/pago_pendiente.html
+++ b/templates/pedidos/pedido/pago_pendiente.html
@@ -21,38 +21,29 @@
         <div class="panel-body">
             <div class='row'>
                 <div class="col-lg-6">
-                    <span class="pull-right hidden-print">
-                            {% if compra.user.telefono %}
-                                <a class="btn btn-success"
-                                   onclick="contactarcliente('{{ compra.get_telefono }}', '{{ compra.get_nombres }}')"
-                                   href="javascript:void(0);">
-                                <i class="fa fa-whatsapp"></i> Contactar Cliente
-                            </a>
-                            {% endif %}
-                    </span>
                     <span>
-                            <h3><i class="fa fa-money-bill"></i> Detalle del Pago</h3>
+                            <h3><i class="fa fa-money-bill"></i> Payment Detail</h3>
                         </span>
                     <hr>
                     <div class="form-group">
-                        <h5 class="h5">Comprobante</h5>
+                        <h5 class="h5">Voucher</h5>
                         <div>
                             <input data-show-remove="false" class="form-control" type="file"
                                    id="id_archivo_pago" data-max-file-size="3M"
                                    data-default-file="{{ obj.archivo_pago.url }}"
                                    data-allowed-file-extensions="jpg jpeg png tiff jfif pdf">
-                            {% with urlarchivo='https://docs.google.com/gview?url='|add:URL_GENERAL|add:obj.archivo_pago.url|add:'&embedded=true' %}
-                                <a {% if obj.archivo_pago_is_image %}data-fancybox="image"
-                                   href="{{ obj.archivo_pago.url }}" {% else %} data-fancybox
-                                   data-type="iframe"
-                                   href="{{ urlarchivo }}" {% endif %} class="btn btn-link px-0">
-                                    Ver comprobante en otra ventana
-                                </a>
-                            {% endwith %}
-                            o
+                            {#                            {% with urlarchivo='https://docs.google.com/gview?url='|add:URL_GENERAL|add:obj.archivo_pago.url|add:'&embedded=true' %}#}
+                            {#                                <a {% if obj.archivo_pago_is_image %}data-fancybox="image"#}
+                            {#                                   href="{{ obj.archivo_pago.url }}" {% else %} data-fancybox#}
+                            {#                                   data-type="iframe"#}
+                            {#                                   href="{{ urlarchivo }}" {% endif %} class="btn btn-link px-0">#}
+                            {#                                    Ver comprobante en otra ventana#}
+                            {#                                </a>#}
+                            {#                            {% endwith %}#}
+                            {#                            o#}
                             <a class="btn btn-link pl-0"
                                href="{{ obj.archivo_pago.url }}" target="_blank">
-                                Descargar
+                                Download voucher
                             </a>
                         </div>
                     </div>
@@ -62,24 +53,12 @@
                                 <thead class="thead-light">
                                 <tr>
                                     <th colspan="2">
-                                        <h3 class="modal-title">{{ compra.get_icon }} Pago
-                                            por {{ compra.get_metodo_pago_display }}</h3>
+                                        <h3 class="modal-title">{{ compra.get_icon }} Payment
+                                            for {{ compra.get_metodo_pago_display }}</h3>
                                     </th>
                                 </tr>
                                 </thead>
-{#                                <tbody>#}
-{#                                <tr>#}
-{#                                    <th class="text-left">IP</th>#}
-{#                                    <td class="text-left">{{ compra.session_user.ip }}</td>#}
-{#                                </tr>#}
-{#                                <tr>#}
-{#                                    <th class="text-left">Dispositivo</th>#}
-{#                                    <td class="text-left">{{ compra.session_user.dispositivo }}</td>#}
-{#                                </tr>#}
-{#                                <tr>#}
-{#                                    <th class="text-left">Localidad</th>#}
-{#                                    <td class="text-left">{{ compra.session_user.areageografica }}</td>#}
-{#                                </tr>#}
+                                <tbody>
                                 {% for r in resp_metodo_pago %}
                                     <tr>
                                         <th class="text-left">{{ r.nombre }}</th>
@@ -99,75 +78,127 @@
                         <input type="hidden" name="action" value="{{ action }}"/>
                         <fieldset>
                             <span>
-                                <h3><i class="fa fa-search"></i> Validación</h3>
+                                <h3><i class="fa fa-search"></i> Validation</h3>
                             </span>
                             <hr>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <table class="table table-bordered">
-                                        <tbody>
-                                        <tr>
-                                            <td>Cliente</td>
-                                            <td>{{ obj.user.username }} - {{ obj.user.get_full_name }}
-                                                - {{ obj.user.documento|default:'' }}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Email</td>
-                                            <td>{{ obj.user.email }}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Cuenta</td>
-                                            <td>
-                                                {% if obj.entidad_fin %}
-                                                    {{ obj.entidad_fin.num_cuenta }} -
-                                                    {{ obj.entidad_fin.ent_fin.nombre }}
-                                                {% else %}
-                                                    Ninguna
-                                                {% endif %}</td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                    <table class="table table-striped table-bordered">
-                                        <thead>
-                                        <tr>
-                                            <th>Item</th>
-                                            <th class="text-center" width="10%">Precio</th>
-                                            {#                                    <th class="text-right" width="20%">SUBTOTAL</th>#}
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        {% for l in detallepedido %}
-                                            <tr>
-                                                <td>
-                                                    <span class="text-inverse">{{ l.item.nombre }}</span>
-                                                </td>
-                                                <td style="vertical-align : middle" class="text-center">
-                                                    {{ SIMBOLO_MONEDA }}{{ l.precio|intcomma }}
-                                                </td>
-                                                {#                                        <td style="vertical-align : middle" class="text-right">#}
-                                                {#                                            {{ SIMBOLO_MONEDA }}{{ l.total|intcomma }}</td>#}
-                                            </tr>
-                                        {% endfor %}
-                                        </tbody>
-                                    </table>
+                                    <div class="col-lg-12">
+                                        <div class="table-responsive">
+                                            <table class="table table-bordered table-td-valign-middle">
+                                                <tbody>
+                                                <tr>
+                                                    <td class="text-left text-bold">User</td>
+                                                    <td class="text-left">{{ obj.user.get_full_name }}</td>
+                                                    <td class="text-left text-bold">Email</td>
+                                                    <td class="text-left">{{ obj.user.email|default:'' }}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="text-left text-bold">Country</td>
+                                                    <td class="text-left">{{ obj.user.pais.nombre|default:'' }}</td>
+                                                    <td class="text-left text-bold">Institution</td>
+                                                    <td class="text-left">{{ obj.user.institucion|default:'Unregistered'|upper }}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="text-left text-bold">Conference</td>
+                                                    <td class="text-left">{{ obj.cuota.conference.title }}</td>
+                                                    <td class="text-left text-bold">Fee type</td>
+                                                    <td class="text-left">{{ obj.cuota.get_role_display }}
+                                                        {% if obj.cuota.special_price %}<br>
+                                                            <b>(Special Price for Sponsor Universities (UNEMI, VIU, or
+                                                                UCLM))</b>{% endif %}</td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                            <table class="table table-bordered table-td-valign-middle">
+                                                {% if obj.cuota.role == 1 %}
+                                                    <thead>
+                                                    <tr>
+                                                        <th class="text-center" colspan="5"><i class="fa fa-list"></i>
+                                                            Details
+                                                        </th>
+                                                    </tr>
+                                                    <tr>
+                                                        <th class="text-center" width="5%">#</th>
+                                                        <th class="text-center" width="10%">Id</th>
+                                                        <th class="text-center">Title</th>
+                                                        <th class="text-center"># Sheets</th>
+                                                        <th class="text-center">Subtotal</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    {% for paper in obj.get_papers %}
+                                                        <tr>
+                                                            <td class="text-center">{{ forloop.counter }}</td>
+                                                            <td class="text-center">{{ paper.idpaper }}</td>
+                                                            <td class="text-center">{{ paper.title }}</td>
+                                                            <td class="text-center">{{ paper.sheets }}</td>
+                                                            <td class="text-center">
+                                                                $ {{ paper.value|floatformat:2 }}</td>
+                                                        </tr>
+                                                    {% endfor %}
+                                                    </tbody>
+                                                    <tfoot>
+                                                    <tr>
+                                                        <td colspan="4" class="text-right">Total</td>
+                                                        <td class="text-center">$
+                                                            <b>{{ obj.subtotal|floatformat:2 }}</b></td>
+                                                    </tr>
+                                                    </tfoot>
+                                                {% elif obj.cuota.role == 3  or obj.cuota.special_price %}
+                                                    <thead>
+                                                    <tr>
+                                                        <th class="text-center" colspan="4"><i class="fa fa-list"></i>
+                                                            Details
+                                                        </th>
+                                                    </tr>
+                                                    <tr>
+                                                        <th class="text-center">Fee type</th>
+                                                        <th class="text-center">¿Special Price Applied?</th>
+                                                        <th class="text-center">Institution</th>
+                                                        <th class="text-center">Evidence</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    <tr>
+                                                        <td class="text-center">
+                                                            {{ obj.cuota.get_role_display }}
+                                                        </td>
+                                                        <td class="text-center">
+                                                            <i class="{{ obj.cuota.get_special_price }}"></i>
+                                                        </td>
+                                                        <td class="text-center">
+                                                            {{ obj.user.institucion|default:'Unregistered'|upper }}
+                                                        </td>
+                                                        <td class="text-center">
+                                                            <a href="/media/{{ obj.archivo_evidencia }}"
+                                                               target="_blank" class="btn-link"><i
+                                                                    class="fa fa-file-pdf"></i> Evidence</a>
+                                                        </td>
+                                                    </tr>
+                                                    </tbody>
+                                                {% endif %}
+                                            </table>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </fieldset>
                         <fieldset>
                             <span>
-                                <h3><i class="fa fa-check-double"></i> Respuesta</h3>
+                                <h3><i class="fa fa-check-double"></i> Answer</h3>
                             </span>
                             <hr>
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="form-group">
-                                        <h5 class="h5">Estado de la transacción</h5>
+                                        <h5 class="h5">Transaction status</h5>
                                         <select required="" class="form-control" name="estado" id="id_estado">
                                             <option value="COMPLETADO">
-                                                Aprobar
+                                                Approve
                                             </option>
                                             <option value="ANULADO">
-                                                Rechazar
+                                                Decline
                                             </option>
                                         </select>
                                         <div class="invalid-feedback" id="errorMessageestado"></div>
@@ -175,8 +206,8 @@
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="form-group">
-                                        <h5 class="h5">Observación</h5>
-                                        <textarea placeholder="Sea claro y específico" rows="4" required=""
+                                        <h5 class="h5">Observation</h5>
+                                        <textarea placeholder="Be clear and specific" rows="4" required=""
                                                   class="form-control"
                                                   id="id_observacion"
                                                   name="observacion"></textarea>
@@ -187,11 +218,11 @@
                         </fieldset>
                         <div class="form-group">
                             <a class="btn btn-danger" style="color: #ffffff;" href="{{ ruta }}">
-                                <i class="fa fa-window-close"></i> Cancelar
+                                <i class="fa fa-window-close"></i> Cancel
                             </a>
                             <button {% if action != 'ver' %}type="submit" id="submit"{% else %}disabled{% endif %}
                                     class="btn btn-success">
-                                <i class="fa fa-save"></i> Guardar
+                                <i class="fa fa-save"></i> Save
                             </button>
                         </div>
                     </form>
