--- a/templates/public/landing/register.html
+++ b/templates/public/landing/register.html
@@ -2,6 +2,7 @@
 {% load templatefunctions %}
 {% block head %}
     <link rel="stylesheet" href="/static/views.css">
+    <link rel="stylesheet" href="/static/register.css">
 {% endblock %}
 {% block content %}
     <div class="mt-125 p-3">
@@ -157,8 +158,7 @@
                             <h3><i class="fas fa-calendar-alt mr-2"></i> {{ conference.title }}</h3>
                         </div>
                         <div class="card-body">
-                            <img src="/static/images/landing/4.jpeg" alt="{{ conference.title }}"
-                                 class="conference-image">
+                            <img src="/static/images/landing/4.jpeg" alt="{{ conference.title }}"  class="conference-image" style="width: 100%">
                             <p class="mb-4" style="font-size: 12px">{{ conference.get_summary.description }}</p>
                             <div class="date-info">
                                 <i class="fa fa-calendar"></i>
