--- a/templates/public/paginacion.html
+++ b/templates/public/paginacion.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/static/pagination_public.css" type="text/css">
 <div class="pagination-container">
     <div class="pagination-wrapper">
         <nav>
