--- a/templates/public/perfil/orders/view_payments.html
+++ b/templates/public/perfil/orders/view_payments.html
@@ -4,13 +4,13 @@
 {% block contentperfil %}
 
     <div class="col-lg-12">
+        <div class="content-card mt-4">
+            <div class="content-header p-4">
+                <h2 class="h4"><i class="fa fa-shopping-bag me-2"></i>{{ title }}</h2>
+            </div>
+        </div>
         <div class="content-card">
             <div class="p-4">
-                <div class="content-header">
-                    <i class="fa-solid fa-file-invoice"></i>
-                    <h2 class="h4">{{ title }}</h2>
-                </div>
-
                 <div class="table-responsive">
                     <table class="table table-modern">
                         <thead>
@@ -35,7 +35,11 @@
                                 </td>
                                 <td class="text-center">${{ l.get_total_by_state|floatformat:2 }}</td>
                                 <td class="text-center">
-                                    <span class="badge badge-{{ l.estadoSTR }}">{{ l.get_estado_display }}</span>
+                                    {% if l.estado == 'PENDIENTE_PAGO' %}
+                                        <a href="/complete_purchase/?order={{ l.pk|encrypt }}" class="btn btn-success btn-sm"><i class="fa fa-money-bill"></i> Proceed to payment</a>
+                                    {% else %}
+                                        <span class="badge badge-{{ l.estadoSTR }}">{{ l.get_estado_display }}</span>
+                                    {% endif %}
                                 </td>
                                 <td class="text-center">
                                     <div class="dropdown">
@@ -43,8 +47,12 @@
                                             ⋮
                                         </button>
                                         <div class="dropdown-menu">
-                                            <a href="#"><i class="fa fa-history"></i> History</a>
-                                            <a href="#"><i class="fa fa-eye"></i> Details</a>
+                                            <a href="javascript:void(0)"
+                                               onclick="formModal('{{ l.pk|encrypt }}', 'Order History', 'historial_pedido')"><i
+                                                    class="fa fa-history"></i> History</a>
+                                            <a href="javascript:void(0)"
+                                               onclick="formModal('{{ l.pk|encrypt }}', 'Order Details', 'detailsRequest')"><i
+                                                    class="fa fa-eye"></i> Details</a>
                                         </div>
                                     </div>
                                 </td>
