--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -477,11 +477,11 @@
                                     <ul class="list-group list-group-flush" id="template_cameraready">
                                         <li class="list-group-item d-flex justify-content-between align-items-center">
                                             <div class="file-info">
-                                                <img src="/static/images/landing/doc.png" class="file-icon"
+                                                <img src="/static/images/landing/pdf.png" class="file-icon"
                                                      alt="Camera ready Icon">
                                                 <span>Camera Ready Guide</span>
                                             </div>
-                                            <a href="/static/Guidelines.docx" download="Guidelines.docx"
+                                            <a href="/static/camera_ready.pdf"
                                                class="btn btn-primary btn-lg" target="_blank">
                                                 <i class="fa fa-download"></i> Download the full guide
                                             </a>
