--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -481,7 +481,7 @@
                                                      alt="Camera ready Icon">
                                                 <span>Camera Ready Guide</span>
                                             </div>
-                                            <a href="/static/camera_ready.pdf"
+                                            <a href="/static/camera_ready_guidelines.pdf"
                                                class="btn btn-primary btn-lg" target="_blank">
                                                 <i class="fa fa-download"></i> Download the full guide
                                             </a>
